4B/cs444/tests/site/fail/fail_implicitthisclassforstaticfields.joos
/* fail: implicit this class for static fields */
public class A {
  protected static int x;
  public int m() {
    return x;
  }
}

